--- a/PROGCOM_B(Ejercicios_del_11_20)ipynb.ipynb
+++ b/PROGCOM_B(Ejercicios_del_11_20)ipynb.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Escribe un programa que calcule el índice de masa corporal (IMC) y determine la categoría (bajo peso, normal, sobrepeso, obesidad). Al final, el programa debe imprimir: el nombre del usuario, su categoría y una breve descripción de lo que debe hacer de acuerdo a su categoría.**"
+        "**11. Escribe un programa que calcule el índice de masa corporal (IMC) y determine la categoría (bajo peso, normal, sobrepeso, obesidad). Al final, el programa debe imprimir: el nombre del usuario, su categoría y una breve descripción de lo que debe hacer de acuerdo a su categoría.**"
       ],
       "metadata": {
         "id": "bFbvvppIlg_F"
@@ -72,7 +72,7 @@
         "id": "vbJSOvrqncGU",
         "outputId": "10c74f6d-3134-4e28-e9da-9808b7386fdf"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
         "id": "fe0sJ7RJn-Hj",
         "outputId": "184dd2ec-4b5b-4ab8-c829-107fa1187e22"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,6 +305,414 @@
       ],
       "metadata": {
         "id": "z7STPgDYqVh5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**14. Escribe un programa que determine el día de la semana según un número (1-7).**"
+      ],
+      "metadata": {
+        "id": "jvt-24j3ombN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con for\n",
+        "dias_semana = [\"Lunes\", \"Martes\", \"Miércoles\", \"Jueves\", \"Viernes\", \"Sábado\", \"Domingo\"]\n",
+        "\n",
+        "num = int(input(\"Ingrese un número (1-7) para conocer el día de la semana: \"))\n",
+        "\n",
+        "for i in range(1, 8):\n",
+        "    if num == i:\n",
+        "        print(f\"El día correspondiente es: {dias_semana[i-1]}\")\n",
+        "        break\n",
+        "else:\n",
+        "    print(\"Número fuera de rango. Debe ser entre 1 y 7.\")"
+      ],
+      "metadata": {
+        "id": "DLHMYAKSo4Ew"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con el while\n",
+        "dias_semana = [\"Lunes\", \"Martes\", \"Miércoles\", \"Jueves\", \"Viernes\", \"Sábado\", \"Domingo\"]\n",
+        "\n",
+        "num = int(input(\"Ingrese un número (1-7) para conocer el día de la semana: \"))\n",
+        "\n",
+        "while num < 1 or num > 7:\n",
+        "    print(\"Número fuera de rango. Intente de nuevo.\")\n",
+        "    num = int(input(\"Ingrese un número (1-7): \"))\n",
+        "\n",
+        "print(f\"El día correspondiente es: {dias_semana[num-1]}\")"
+      ],
+      "metadata": {
+        "id": "m2W7ZnT8qOPO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**15. Desarrolla un programa que valide si tres números pueden formar un triángulo y de qué tipo es.**"
+      ],
+      "metadata": {
+        "id": "UXuTIQIarfzL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con el for\n",
+        "def tipo_triangulo(a, b, c):\n",
+        "    if a == b == c:\n",
+        "        return \"Equilátero\"\n",
+        "    elif a == b or a == c or b == c:\n",
+        "        return \"Isósceles\"\n",
+        "    else:\n",
+        "        return \"Escaleno\"\n",
+        "\n",
+        "lados = []\n",
+        "for i in range(3):  # Iteramos 3 veces para pedir 3 lados\n",
+        "    lado = float(input(f\"Ingrese la longitud del lado {i+1}: \"))\n",
+        "    lados.append(lado)\n",
+        "\n",
+        "a, b, c = lados\n",
+        "if a + b > c and a + c > b and b + c > a:\n",
+        "    print(f\"Los lados forman un triángulo {tipo_triangulo(a, b, c)}.\")\n",
+        "else:\n",
+        "    print(\"Los lados ingresados NO forman un triángulo.\")"
+      ],
+      "metadata": {
+        "id": "8TeZYd9Xr-nm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con el while\n",
+        "def tipo_triangulo(a, b, c):\n",
+        "    if a == b == c:\n",
+        "        return \"Equilátero\"\n",
+        "    elif a == b or a == c or b == c:\n",
+        "        return \"Isósceles\"\n",
+        "    else:\n",
+        "        return \"Escaleno\"\n",
+        "\n",
+        "lados = []\n",
+        "i = 0\n",
+        "while i < 3:\n",
+        "    try:\n",
+        "        lado = float(input(f\"Ingrese la longitud del lado {i+1}: \"))\n",
+        "        if lado > 0:\n",
+        "            lados.append(lado)\n",
+        "            i += 1\n",
+        "        else:\n",
+        "            print(\"El lado debe ser un número positivo.\")\n",
+        "    except ValueError:\n",
+        "        print(\"Entrada no válida. Ingrese un número.\")\n",
+        "\n",
+        "a, b, c = lados\n",
+        "if a + b > c and a + c > b and b + c > a:\n",
+        "    print(f\"Los lados forman un triángulo {tipo_triangulo(a, b, c)}.\")\n",
+        "else:\n",
+        "    print(\"Los lados ingresados NO forman un triángulo.\")"
+      ],
+      "metadata": {
+        "id": "6XG9IP3jtDcZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**16. Crea un programa que muestre la tabla de multiplicar de un número hasta el 10.**"
+      ],
+      "metadata": {
+        "id": "f6SkV0xbtoAg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con el for\n",
+        "num = int(input(\"Ingrese un número para ver su tabla de multiplicar: \"))\n",
+        "\n",
+        "print(f\"\\nTabla de multiplicar del {num}:\")\n",
+        "for i in range(1, 11):  # Itera del 1 al 10\n",
+        "    print(f\"{num} x {i} = {num * i}\")"
+      ],
+      "metadata": {
+        "id": "aRpPUe0Bt66Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con el while\n",
+        "num = int(input(\"Ingrese un número para ver su tabla de multiplicar: \"))\n",
+        "\n",
+        "print(f\"\\nTabla de multiplicar del {num}:\")\n",
+        "i = 1\n",
+        "while i <= 10:\n",
+        "    print(f\"{num} x {i} = {num * i}\")\n",
+        "    i += 1\n"
+      ],
+      "metadata": {
+        "id": "4YYeKYObt7yI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**17. Escribe un programa que calcule la suma de números naturales hasta n.**"
+      ],
+      "metadata": {
+        "id": "pLARS1AOvy6_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con el for\n",
+        "n = int(input(\"Ingrese un número natural (n) para calcular la suma hasta n: \"))\n",
+        "\n",
+        "if n < 1:\n",
+        "    print(\"Por favor, ingrese un número natural positivo.\")\n",
+        "else:\n",
+        "    suma = 0\n",
+        "    for i in range(1, n + 1):\n",
+        "        suma += i\n",
+        "    print(f\"La suma de los números naturales hasta {n} es: {suma}\")"
+      ],
+      "metadata": {
+        "id": "cw_cIhNmwS3_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con el while\n",
+        "n = int(input(\"Ingrese un número natural (n) para calcular la suma hasta n: \"))\n",
+        "\n",
+        "if n < 1:\n",
+        "    print(\"Por favor, ingrese un número natural positivo.\")\n",
+        "else:\n",
+        "    suma = 0\n",
+        "    i = 1\n",
+        "    while i <= n:\n",
+        "        suma += i\n",
+        "        i += 1\n",
+        "    print(f\"La suma de los números naturales hasta {n} es: {suma}\")"
+      ],
+      "metadata": {
+        "id": "YWzZmyPmwka0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**18.Desarrolla un programa que calcule el factorial de un número. Recuerda que el factorial de 0 es 1 y no existen factoriales negativos.**"
+      ],
+      "metadata": {
+        "id": "dWeFZNVkxBd_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con el for\n",
+        "n = int(input(\"Ingrese un número para calcular su factorial: \"))\n",
+        "\n",
+        "if n < 0:\n",
+        "    print(\"No existe el factorial de un número negativo.\")\n",
+        "else:\n",
+        "    factorial = 1\n",
+        "    for i in range(1, n + 1):\n",
+        "        factorial *= i\n",
+        "    print(f\"El factorial de {n} es: {factorial}\")"
+      ],
+      "metadata": {
+        "id": "d7LiwEkCynOO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con el while\n",
+        "n = int(input(\"Ingrese un número para calcular su factorial: \"))\n",
+        "\n",
+        "if n < 0:\n",
+        "    print(\"No existe el factorial de un número negativo.\")\n",
+        "else:\n",
+        "    factorial = 1\n",
+        "    i = 1\n",
+        "    while i <= n:\n",
+        "        factorial *= i\n",
+        "        i += 1\n",
+        "    print(f\"El factorial de {n} es: {factorial}\")"
+      ],
+      "metadata": {
+        "id": "6mhWW-v9ynqU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**19.Crea un programa que muestre los primeros n números de la serie Fibonacci**"
+      ],
+      "metadata": {
+        "id": "JQgU_qhwyB8z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con for\n",
+        "n = int(input(\"Ingrese la cantidad de números de la serie Fibonacci que desea ver: \"))\n",
+        "\n",
+        "if n <= 0:\n",
+        "    print(\"Por favor, ingrese un número entero positivo.\")\n",
+        "else:\n",
+        "    fibonacci = [0, 1]\n",
+        "    for i in range(2, n):\n",
+        "        fibonacci.append(fibonacci[-1] + fibonacci[-2])\n",
+        "\n",
+        "    print(f\"Serie de Fibonacci con {n} términos: {fibonacci[:n]}\")"
+      ],
+      "metadata": {
+        "id": "4imUBjocymAF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con while\n",
+        "n = int(input(\"Ingrese la cantidad de números de la serie Fibonacci que desea ver: \"))\n",
+        "\n",
+        "\n",
+        "if n <= 0:\n",
+        "    print(\"Por favor, ingrese un número entero positivo.\")\n",
+        "else:\n",
+        "    a, b = 0, 1\n",
+        "    contador = 0\n",
+        "\n",
+        "    print(f\"Serie de Fibonacci con {n} términos:\")\n",
+        "    while contador < n:\n",
+        "        print(a, end=\" \")\n",
+        "        a, b = b, a + b\n",
+        "        contador += 1"
+      ],
+      "metadata": {
+        "id": "XF83JSqh1OCW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**20. Escribe un programa que adivine entre un conjunto de diez colores definidos por el usuario, con un máximo de 10 intentos.**"
+      ],
+      "metadata": {
+        "id": "INwL2n936eLJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con for\n",
+        "import random\n",
+        "\n",
+        "colores = []\n",
+        "print(\"Ingrese 10 colores para jugar:\")\n",
+        "for i in range(10):\n",
+        "    color = input(f\"Color {i+1}: \").strip().lower()\n",
+        "    colores.append(color)\n",
+        "\n",
+        "color_secreto = random.choice(colores)\n",
+        "\n",
+        "print(\"\\nHe elegido un color al azar. ¡Intenta adivinarlo!\")\n",
+        "\n",
+        "for intento in range(1, 11):\n",
+        "    respuesta = input(f\"Intento {intento}/10: \").strip().lower()\n",
+        "\n",
+        "    if respuesta == color_secreto:\n",
+        "        print(f\"¡Felicidades! Adivinaste el color en {intento} intentos.\")\n",
+        "        break\n",
+        "    else:\n",
+        "        print(\"Incorrecto. Intenta de nuevo.\")\n",
+        "else:\n",
+        "    print(f\"Lo siento, has agotado tus intentos. El color era '{color_secreto}'.\")"
+      ],
+      "metadata": {
+        "id": "uzRrd9ps6g16"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Con el while\n",
+        "import random\n",
+        "\n",
+        "colores = []\n",
+        "print(\"Ingrese 10 colores para jugar:\")\n",
+        "i = 0\n",
+        "while i < 10:\n",
+        "    color = input(f\"Color {i+1}: \").strip().lower()\n",
+        "    colores.append(color)\n",
+        "    i += 1\n",
+        "\n",
+        "color_secreto = random.choice(colores)\n",
+        "\n",
+        "print(\"\\nHe elegido un color al azar. ¡Intenta adivinarlo!\")\n",
+        "\n",
+        "intentos = 0\n",
+        "acertado = False\n",
+        "while intentos < 10:\n",
+        "    respuesta = input(f\"Intento {intentos+1}/10: \").strip().lower()\n",
+        "\n",
+        "    if respuesta == color_secreto:\n",
+        "        print(f\"¡Felicidades! Adivinaste el color en {intentos+1} intentos.\")\n",
+        "        acertado = True\n",
+        "        break\n",
+        "    else:\n",
+        "        print(\"Incorrecto. Intenta de nuevo.\")\n",
+        "\n",
+        "    intentos += 1\n",
+        "\n",
+        "if not acertado:\n",
+        "    print(f\"Lo siento, has agotado tus intentos. El color era '{color_secreto}'.\")"
+      ],
+      "metadata": {
+        "id": "dWXlkrQH6hCY"
       },
       "execution_count": null,
       "outputs": []
